src/builder/tests/snapshots/ciboulette2postgres__builder__tests__insert__relationship_external_single.snap
---
source: src/builder/tests/insert.rs
expression: res

---
(
    "WITH \n\"cte_peoples_insert\" AS (INSERT INTO \"public\".\"peoples\" (\"public\".\"peoples\".\"first-name\", \"public\".\"peoples\".\"last-name\") VALUES ($0, $1) RETURNING *), \"cte_peoples_data\" AS (SELECT \"cte_peoples_insert\".\"id\" AS \"id\", $2::TEXT AS \"type\", JSON_BUILD_OBJECT($3, \"cte_peoples_insert\".\"age\", $4, \"cte_peoples_insert\".\"first-name\", $5, \"cte_peoples_insert\".\"gender\", $6, \"cte_peoples_insert\".\"last-name\", $7, \"cte_peoples_insert\".\"twitter\")  AS \"data\" FROM \"cte_peoples_insert\"), \"cte_rel_articles_id\" AS (VALUES ($8::uuid)), \"cte_rel_articles_insert\" AS (INSERT INTO \"public\".\"articles\" (\"public\".\"articles\".\"article_id\", \"public\".\"articles\".\"people_id\") SELECT \"cte_peoples_data\".\"id\" AS \"article_id\", \"cte_rel_articles_id\".\"id\" AS \"people_id\" FROM \"cte_peoples_data\", \"cte_rel_articles_id\" RETURNING \"public\".\"articles\".\"id\", \"public\".\"articles\".\"article_id\", \"public\".\"articles\".\"people_id\"), \"cte_rel_articles_rel_data\" AS (SELECT \"cte_rel_articles_insert\".\"id\" AS \"id\", $9::TEXT AS \"type\", JSON_BUILD_OBJECT($10, \"cte_rel_articles_insert\".\"article_id\", $11, \"cte_rel_articles_insert\".\"people_id\")  AS \"data\" FROM \"cte_rel_articles_insert\"), \"cte_rel_articles_data\" AS (SELECT \"public\".\"articles\".\"id\" AS \"id\", $12::TEXT AS \"type\", JSON_BUILD_OBJECT($13, \"public\".\"articles\".\"body\", $14, \"public\".\"articles\".\"title\")  AS \"data\" FROM \"public\".\"articles\" IN (SELECT \"id\" FROM \"cte_rel_articles_id\") SELECT * FROM \"cte_peoples_data\" UNION ALL SELECT * FROM \"cte_rel_articles_rel_data\" UNION ALL SELECT * FROM \"cte_rel_articles_data\"",
    Ciboulette2SqlArguments {
        inner: [
            Text(
                Some(
                    "Hello",
                ),
            ),
            Text(
                Some(
                    "World",
                ),
            ),
            Text(
                Some(
                    "peoples",
                ),
            ),
            Text(
                Some(
                    "age",
                ),
            ),
            Text(
                Some(
                    "first-name",
                ),
            ),
            Text(
                Some(
                    "gender",
                ),
            ),
            Text(
                Some(
                    "last-name",
                ),
            ),
            Text(
                Some(
                    "twitter",
                ),
            ),
            Text(
                Some(
                    "8759b021-0932-40cb-8386-e1a83da1c73e",
                ),
            ),
            Text(
                Some(
                    "people-article",
                ),
            ),
            Text(
                Some(
                    "article_id",
                ),
            ),
            Text(
                Some(
                    "people_id",
                ),
            ),
            Text(
                Some(
                    "articles",
                ),
            ),
            Text(
                Some(
                    "body",
                ),
            ),
            Text(
                Some(
                    "title",
                ),
            ),
        ],
    },
)
